# dinopass

./: .dockerignore  .editorconfig  .env.prod.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  install.sh  requirements.txt  setup.py  wsgi.py
.github/workflows/: ci.yml  release.yml
backend/: .db.env  .db.env.template  .flake8  alembic.ini  app.py  cli.py  config.py  encryption.py  entrypoint.sh  extensions.py  helpers.py  main.py  models.py  pyproject.toml  schemas.py  settings.py  validators.py  views.py
backend/api/: __init__.py  crud.py  deps.py  exceptions.py  passwords.py  rate_limit.py  resources.py  responses.py  routes.py  users.py
backend/api/endpoints/: deps.py  master_password.py  meta.py  password.py  settings.py  updates.py
backend/api/v1/: exceptions.py  responses.py
backend/api/v1/endpoints/: deps.py  master_password.py  password.py  settings.py
backend/cases/: master_password.py  password.py
backend/config/: api_settings.py  cli_settings.py  db_settings.py
backend/crud/: attachment.py  base.py  master_password.py  password.py  session.py  settings.py  updates.py
backend/migrations/: env.py
backend/migrations/ciphermoth/versions/: 4d5e6f7a8b9c_add_update_check_enabled.py  5e6f7a8b9c0d_trash_partial_unique_index.py  6f7a8b9c0d1e_add_custom_fields.py  7a8b9c0d1e2f_add_folder.py  8b9c0d1e2f3a_add_kind.py  9c0d1e2f3a4b_add_password_attachments.py
backend/migrations/dinopass/: env.py
backend/migrations/dinopass/versions/: 1b3a2c4d5e6f_initial.py  2a3b4c5d6e7f_add_username_to_passwords.py  3c4d5e6f7a8b_add_vault_entry_fields.py  3f4a5b6c7d8e_add_kdf_version.py
backend/migrations/scripts/: migrate.sh
backend/models/: __init__.py  base.py  master_password.py  mixins.py  password.py  settings.py  user.py
backend/schemas/: exceptions_responses.py  master_password.py  password.py  settings.py
backend/scripts/db/: 001-create-tables.sql
dinopass/: cli.py  encryption.py  helpers.py  models.py  views.py
dinopass/backend/: api_settings.py  db.py  helpers.py  main.py  models.py  requirements.txt  views.py
dinopass/backend/api/: crud.py  deps.py  schemas.py
dinopass/backend/cli/: main.py
dinopass/backend/config/: db.py
dinopass/backend/crud/: base.py  password.py
dinopass/backend/models/: password.py
dinopass/docker/api/: Dockerfile
dinopass/docker/cli/: Dockerfile
dinopass/frontend/: package-lock.json  package.json
docker/backend/: Dockerfile  Dockerfile.dev
docker/frontend/: Dockerfile  Dockerfile.dev  entrypoint.sh
docker/updater/: Dockerfile  updater.sh
docs/: CLI.md
docs/brand/: ciphermoth-ascii.txt
frontend/: .eslintcache  .prettierrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  serve.json  vite.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.js  App.jsx  constants.js  index.js  index.jsx  routes.js  store.js  utils.js
frontend/templates/: index.html
scripts/: release.sh
stuff/: cli.py  credential.py  encryption.py  helpers.py  models.py  settings.py  stuff.py  views.py
(+72 files in other folders)
