[project]
name = "backend"
version = "0.2.0"
description = "Dinopass Password Manager API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "bcrypt>=4.2.0",
    "cryptography>=43.0.0",
    "asyncpg>=0.30.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.13.0",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
