[project]
name = "backend"
version = "0.2.0"
description = "Dinopass Password Manager API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "bcrypt>=4.2.0",
    "cryptography>=43.0.0",
    "asyncpg>=0.30.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.13.0",
    "slowapi>=0.1.9",
    "pyzipper>=0.3.6",
    "python-multipart>=0.0.9",
    "typer>=0.12",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "ty>=0.0.23",
]

[project.scripts]
dinopass = "cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [".git", "__pycache__", ".mypy_cache", ".pytest_cache"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["B008"]  # FastAPI Depends() in function signatures is idiomatic

[tool.ruff.lint.isort]
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.13"
