[project]
name = "backend"
version = "0.3.0"
description = "Dinopass Password Manager API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "bcrypt>=5.0.0",
    "cryptography>=49.0.0",
    "asyncpg>=0.31.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
    "python-dotenv>=1.2.0",
    "pydantic-settings>=2.14.0",
    "alembic>=1.18.5",
    "slowapi>=0.1.10",
    "pyzipper>=0.4.0",
    "python-multipart>=0.0.32",
    "typer>=0.26.0",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
    "ty>=0.0.57",
]

[project.scripts]
dinopass = "cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [".git", "__pycache__", ".mypy_cache", ".pytest_cache"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["B008"]  # FastAPI Depends() in function signatures is idiomatic

[tool.ruff.lint.isort]
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.13"
